Mon Nov 21 13:26:53 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * NEWS:

          Updated NEWS file to reflect additions to the latest beta.

Mon Nov 21 11:00:02 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* bin/MakeProjectCreator/config/cidlc.mpb

	Added a verbatim section for gnuace targets to pull in the
	boost_filesystem and boost_regex libraries.

Mon Nov 21 08:16:29 2005  Steve Huston  <shuston@riverace.com>

	* ace/SSL/SSL_Context.h: Removed "::" from friend declaration to
	  fix compile errors on Solaris, Forte 6 Update 2. (Sun C++ 5.4).

Fri Nov 18 23:07:09 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * include/makeinclude/wrapper_macros.GNU:

          Applied a syntax submitted by Martin Corino <mcorino@rememdy.nl>
          to the setting of $LEX and $YACC. The existing syntax set
          these variables only if they were not already set, but
          unfortunately, GNU make sets them by default. For DOC
          Group purposes, they need to be set to 'flex' and
          'bison' respectively.

Fri Nov 18 17:22:19 2005  Steve Huston  <shuston@riverace.com>

	* protocols/ace/RMCast/Template_Instantiations.cpp: Completed
	  template instantiations.

	* protocols/ace/RMCast/Makefile.am:
	* protocols/ace/TMCast/Template_Instantiations.cpp: Explicit
	  instantiations needed for TMCast.

	* tests/Based_Pointer_Test.cpp: Added explicit instantiation for
	  ACE_Malloc_T<ACE_MMAP_MEMORY_POOL, ACE_Null_Mutex,
	  ACE_PI_Control_Block>.

	* tests/DLList_Test.cpp: #include "ace/Malloc_T.h" rather than
	  "ace/Malloc.h" to pick up ACE_Allocator<> before the explicit
	  instantiation needs it.

Fri Nov 18 14:16:45 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

	* ace/WIN32_Asynch_IO.cpp (shared_read): Added a new case for
	  ERROR_MORE_DATA, which isn't actually an error after all.
  	  Thanks to Yongming Wang <wangym@gmail.com> for contributing
 	  this.

Fri Nov 18 10:39:01 2005  William Otte  <wotte@dre.vanderbilt.edu>
